--- a/README
+++ b/README
@@ -1,9 +1,10 @@
 = README
 
 # Running the submission:
-To run our submission type `go run main.go [dir path]` and it will show word requencies map for the documents found in the given directory path. After that it will wait for the user input but will not do anything (see question 1.)
+To run our submission type `go run main.go [dir path]` and it will show word frequencies map for the documents found in the given directory path. After that it will wait for the user input but will not do anything with it (see question 1.).
 
 Our program is already concurrent and run `Frequencies()` function as a GO routines for each of the documents.
 
 # Questions:
-1. what do you mean by "print relevant words" in the first milestone?
+
+1. What do you mean by "print relevant words" in the first milestone?
